===========
Version 1.1
===========
- Modified form for 'Forced root block'
- Removed z-index for tool tips from Lytebox library
- Added form for custom CSS for editable area of editor

===========
Version 1.0
===========

First version of TinyConfig