@@ -4,6 +4,7 @@ Version 1.1
 - Modified form for 'Forced root block'
 - Removed z-index for tool tips from Lytebox library
 - Added form for custom CSS for editable area of editor
+- Toolsets for additional user groups couldn't be saved
 
 ===========
 Version 1.0
